--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Users/Edit.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Users/Edit.cshtml
@@ -77,7 +77,7 @@
             });
 
             var message = '@TempData["AlertMessage"]';
-            if (message != '') {
+            if (message !== '') {
                 dhHelpdesk.admin.users.utils.showWarning(message);
             }
         });
