--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Users/_WorkingGroups.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Areas/Admin/Views/Users/_WorkingGroups.cshtml
@@ -1,94 +1,173 @@
 ﻿@using DH.Helpdesk.BusinessData.Enums.Users
-@using DH.Helpdesk.Web.Infrastructure
 @model DH.Helpdesk.Web.Areas.Admin.Models.UserInputViewModel
+@{
+    var admPostFix = WorkingGroupUserPermission.ADMINSTRATOR.ToString();
+    var memberPostFix = "3";
+    var readPostFix = WorkingGroupUserPermission.READ_ONLY.ToString();
+    var customerName = "";
+}
 <div class="container">
-    
-                <table class="tableform">
-                    <thead>
-                        <tr>
-                            <th class="span3">
-                                @Translation.Get("Kund", Enums.TranslationSource.TextTranslation)
-                            </th>
-                            <th class="span3">
-                                @Translation.Get("Driftgrupp", Enums.TranslationSource.TextTranslation)
-                            </th>
-                            <th class="span3">
-                                @Translation.Get("Handläggarrättighet", Enums.TranslationSource.TextTranslation)
-                            </th>
-                            <th class="span3">
-                                @Translation.Get("Läsrättighet", Enums.TranslationSource.TextTranslation)
-                            </th>
-                            <th class="span3">
-                                @Translation.Get("Standard", Enums.TranslationSource.TextTranslation)
-                            </th>
-                        </tr>
-                    </thead>
-                    @{ var customername=""; }
-                    @{ var i = 0; }
-                    @foreach (var uwg in Model.ListWorkingGroupsForUser)
-                    {
-                        var enabledDefWG = (uwg.RoleToUWG == 1) || (uwg.RoleToUWG == 2);        
-                        <tr>
-                            <td>
-                                @if (customername != uwg.CustomerName)
-                                {    
-                                    @uwg.CustomerName
-                                    <input type="radio" style="display: none;" data-field="userWorkingGroup" name="@uwg.CustomerId" value="-1" />
-                                }
-                            </td>
-                            <td>                                                      
-                                <span class ='@(!uwg.IsActive? "disabled" : "")'  >  @Translation.Get(uwg.WorkingGroupName, Enums.TranslationSource.TextTranslation) </span>                               
-                            </td>
-                            <td>
-                                <input type="checkbox" name="@string.Format("UserWorkingGroups[{0}].UserRole", i)" id="UserWorkingGroup_[@i]_2" @(uwg.RoleToUWG == WorkingGroupUserPermission.ADMINSTRATOR? "checked=checked" : "") data-field-id="@i" class="userRole" value="2" />
-                                <input type="hidden" name="@string.Format("UserWorkingGroups[{0}].User_Id", i)" value="@uwg.User_Id" />
-                                <input type="hidden" name="@string.Format("UserWorkingGroups[{0}].WorkingGroup_Id", i)" value="@uwg.WorkingGroup_Id" />
-                            </td>
-                            <td>
-                                <input type="checkbox" name="@string.Format("UserWorkingGroups[{0}].UserRole", i)" id="UserWorkingGroup_[@i]_1" @(uwg.RoleToUWG == WorkingGroupUserPermission.READ_ONLY  ? "checked=checked" : "") data-field-id="@i" class="userRole" value="1" />
-                            </td>
-                            <td>
-                                <input type="radio" name="@uwg.CustomerId" data-field="userWorkingGroup" data-field-id="@i" value="@uwg.IsStandard" @(uwg.IsStandard == 1 && enabledDefWG ? "checked=checked" : "") @(enabledDefWG? "" : "disabled") id="UserWorkingGroup_[@i]_Def"/>
-                                <input type="hidden" name="@string.Format("UserWorkingGroups[{0}].IsDefault", i)" data-field="@string.Format("userWorkingGroup{0}", i)" value="@(enabledDefWG? uwg.IsStandard : '0')" id="UserWorkingGroup_[@i]_Defhid"/>
-                            </td>            
-                        </tr>   
-                        customername = uwg.CustomerName;
-                        i++;
-                    }
-                </table>
+    @for (var i = 0; i < Model.ListWorkingGroupsForUser.Count; i++)
+    {
+        var uwg = Model.ListWorkingGroupsForUser[i];
+        var enabledDefWG = uwg.RoleToUWG == WorkingGroupUserPermission.READ_ONLY || uwg.RoleToUWG == WorkingGroupUserPermission.ADMINSTRATOR;
+        var closeTable = i + 1 == Model.ListWorkingGroupsForUser.Count || uwg.CustomerName != Model.ListWorkingGroupsForUser[i+1].CustomerName;
+        if (customerName != uwg.CustomerName)
+        {
+            <text>
+                <table class="tableform"> 
+                <thead>
+                <tr>
+                    <th class="span3">
+                        @Translation.GetCoreTextTranslation("Kund")
+                    </th>
+                    <th class="span3">
+                        @Translation.GetCoreTextTranslation("Driftgrupp")
+                    </th>
+                    <th class="span3">
+                        <input type="checkbox" class="allAdministrators" @(Model.ListWorkingGroupsForUser.Where(u => u.CustomerName == uwg.CustomerName).All(u => u.RoleToUWG == WorkingGroupUserPermission.ADMINSTRATOR) ? "checked=checked" : "")/>&nbsp;@Translation.GetCoreTextTranslation("Handläggarrättighet")
+                    </th>
+                    <th class="span3">
+                        <input type="checkbox" class="allWorkGroupMember" @(Model.ListWorkingGroupsForUser.Where(u => u.CustomerName == uwg.CustomerName).All(u => u.IsMemberOfGroup) ? "checked=checked" : "")/>&nbsp;@Translation.GetCoreTextTranslation("Medlem i grupp")
+                    </th>
+                    <th class="span3">
+                        <input type="checkbox" class="allReadPermissions" @(Model.ListWorkingGroupsForUser.Where(u => u.CustomerName == uwg.CustomerName).All(u => u.RoleToUWG == WorkingGroupUserPermission.READ_ONLY) ? "checked=checked" : "")/>&nbsp;@Translation.GetCoreTextTranslation("Läsrättighet")
+                    </th>
+                    <th class="span3">
+                        @Translation.GetCoreTextTranslation("Standard")
+                    </th>
+                </tr>
+                </thead>
+                <tbody>
+            </text>
+        }
+        <tr>
+            <td>
+                @if (customerName != uwg.CustomerName)
+                {
+                    @uwg.CustomerName
+                    <input type="radio" style="display: none;" data-field="userWorkingGroup" name="@uwg.CustomerId" value="-1"/>
+                }
+            </td>
+            <td>
+                <span class='@(!uwg.IsActive ? "disabled" : "")'> @Translation.GetCoreTextTranslation(uwg.WorkingGroupName) </span>
+            </td>
+            <td>
+                <input type="checkbox" name="@string.Format("UserWorkingGroups[{0}].UserRole", i)" id="UserWorkingGroup_[@i]_@admPostFix" @(uwg.RoleToUWG == WorkingGroupUserPermission.ADMINSTRATOR ? "checked=checked" : "") data-field-id="@i" class="userRole" value="@admPostFix"/>
+                <input type="hidden" name="@string.Format("UserWorkingGroups[{0}].User_Id", i)" value="@uwg.User_Id"/>
+                <input type="hidden" name="@string.Format("UserWorkingGroups[{0}].WorkingGroup_Id", i)" value="@uwg.WorkingGroup_Id"/>
+            </td>
+            <td>
+                <input type="checkbox" name="@string.Format("UserWorkingGroups[{0}].IsMemberOfGroup", i)" id="UserWorkingGroup_[@i]_@memberPostFix" @(uwg.IsMemberOfGroup ? "checked=checked" : "") data-field-id="@i" class="userRole" value="true"/>
+            </td>
+            <td>
+                <input type="checkbox" name="@string.Format("UserWorkingGroups[{0}].UserRole", i)" id="UserWorkingGroup_[@i]_@readPostFix" @(uwg.RoleToUWG == WorkingGroupUserPermission.READ_ONLY ? "checked=checked" : "") data-field-id="@i" class="userRole" value="@readPostFix"/>
+            </td>
+            <td>
+                <input type="radio" name="@uwg.CustomerId" data-field="userWorkingGroup" data-field-id="@i" value="@uwg.IsStandard" @(uwg.IsStandard == 1 && enabledDefWG ? "checked=checked" : "") @(enabledDefWG ? "" : "disabled") id="UserWorkingGroup_[@i]_Def"/>
+                <input type="hidden" name="@string.Format("UserWorkingGroups[{0}].IsDefault", i)" data-field="@string.Format("userWorkingGroup{0}", i)" value="@(enabledDefWG ? uwg.IsStandard : '0')" id="UserWorkingGroup_[@i]_Defhid"/>
+            </td>
+        </tr>
+        customerName = uwg.CustomerName;
+
+        if (closeTable)
+        {
+            @:</tbody>
+            @:</table>
+        }
+    }
+
 </div>
 <script type="text/javascript">
 
     $(function () {
-        $('.userRole').change(function () {
-            var t = $(this);
-            
-            var id = t.attr('id');
-            
-            if (id.substring(id.length - 1) == '1' && document.getElementById(id).checked == true) {
-                var c = id.substring(0, id.length - 1) + '2';
-
-                document.getElementById(c).checked = false;
+        var admPostFix = '@admPostFix';
+        var memberPostFix = '@memberPostFix';
+        var readPostFix = '@readPostFix';
+        var toggleChecboxesFunc = function (e, colnum) {
+            var checkboxes = $(e.target).parents('table').first()
+                .find('tbody tr td:nth-child(' + colnum + 'n) input[type="checkbox"]');
+            for (var i = 0; i < checkboxes.length; i++) {
+                checkboxes[i].checked = e.target.checked;
+                $(checkboxes[i]).trigger('change', true);
             }
-            if (id.substring(id.length - 1) == '2' && document.getElementById(id).checked == true) {
-                var c = id.substring(0, id.length - 1) + '1';
+        }
 
-                document.getElementById(c).checked = false;
+        $('.allAdministrators').on('click', function (e) { toggleChecboxesFunc(e, 3) });
+        $('.allWorkGroupMember').on('click', function (e) { toggleChecboxesFunc(e, 4) });
+        $('.allReadPermissions').on('click', function (e) { toggleChecboxesFunc(e, 5) });
+
+        function updateAllCheckbox($control, idNum) {
+            var name = '';
+            var colnum = 0;
+            var isChecked = true;
+            switch (idNum) {
+                case readPostFix: {
+                        name = 'allReadPermissions';
+                        colnum = 5;
+                        break;
+                    }
+                case admPostFix: {
+                        name = 'allAdministrators';
+                        colnum = 3;
+                        break;
+                    }
+                case memberPostFix: {
+                        name = 'allWorkGroupMember';
+                        colnum = 4;
+                        break;
+                    }
+                default:
+                    return;
+            }
+            //find if any checkbox is false
+            var parentRoot = $control.parents('table').first();
+            var checkboxes = parentRoot
+                .find('tbody tr td:nth-child(' + colnum + 'n) input[type="checkbox"]');
+            for (var i = 0; i < checkboxes.length; i++) {
+                if (!checkboxes[i].checked) {
+                    isChecked = false;
+                    break;
+                }
+            }
+            parentRoot.find('thead th .' +name)[0].checked = isChecked;
+        }
+
+        $('.userRole').on('change', function (e, isTriggeredByAllChk) {
+            var $control = $(e.target);
+
+            var id = $control.attr('id');
+            var baseName = id.substring(0, id.length - 1);
+            var idNum = id.substring(id.length - 1);
+
+            var readCtrl = document.getElementById(baseName + readPostFix);
+            var memberCtrl = document.getElementById(baseName + memberPostFix);
+            var admCtrl = document.getElementById(baseName + admPostFix);
+
+            if ((idNum === admPostFix || idNum === memberPostFix) && $control.is(':checked') === true) {
+                readCtrl.checked = false;
+                admCtrl.checked = memberCtrl.checked = true;
+            }
+            if (idNum === admPostFix && $control.is(':checked') === false) {
+                memberCtrl.checked = false;
+            }
+            if (idNum === readPostFix && $control.is(':checked') === true) {
+                admCtrl.checked = false;
+                memberCtrl.checked = false;
             }
 
-            var c1 = id.substring(0, id.length - 1) + '1';
-            var c2 = id.substring(0, id.length - 1) + '2';
-            var r =  id.substring(0, id.length - 1) + 'Def';
-            var rh = id.substring(0, id.length - 1) + 'Defhid';
-            
-            if (document.getElementById(c1).checked || document.getElementById(c2).checked) {                               
-                document.getElementById(r).disabled = false;                
-            }
-            else {
+            var r = baseName + 'Def';
+            var rh = baseName + 'Defhid';
+
+            document.getElementById(r).disabled = !(admCtrl.checked || memberCtrl.checked || readCtrl.checked);
+            if (!admCtrl.checked &&
+                    !memberCtrl.checked &&
+                    !readCtrl.checked) {
                 document.getElementById(r).checked = false;
                 document.getElementById(rh).value = '0';
-                document.getElementById(r).disabled = true;                
             }
+            if (!isTriggeredByAllChk)
+                updateAllCheckbox($control, idNum);
 
         });
     });
