--- a/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/CaseQuickOpen.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web/Views/Shared/CaseQuickOpen.cshtml
@@ -4,14 +4,14 @@
         padding-bottom: 0px;
     }
 
-    #btnQuickOpen {
+    /*#btnQuickOpen {
         float: right;
         min-width: 100px;
     }
 
     #txtQuickOpen {
         width: 100%;
-    }
+    }*/
 </style>
 <div class="row-fluid">
     <div class="box-box span12">
@@ -22,11 +22,9 @@
             <div class="span12 pull-right nomargin-padding-bottom">
                 <div class="box-post">
                     <form id="frmQuickOpen" name="frmQuickOpen" class="form-inline nomargin-padding-bottom">
-                        <button type="button" id="btnQuickOpen" class="btn">
-                            @Translation.GetCoreTextTranslation("Öppna")
-                        </button>
-                        <div style="overflow: hidden; padding-right: .3em;">
-                            <input id="txtQuickOpen" tabindex="0" name="txtQuickOpen" rel="tooltip" title="@Translation.GetCoreTextTranslation("Ange ärendenummer du vill öppna")" onkeypress="return event.charCode >= 48 && event.charCode <= 57" placeholder="@Translation.GetCoreTextTranslation("Ange ärendenummer du vill öppna")" type="text" />
+                        <div class="input-append" style="width:98%;">
+                            <input class="span11" id="txtQuickOpen" tabindex="0" name="txtQuickOpen" rel="tooltip" title="@Translation.GetCoreTextTranslation("Ange ärendenummer du vill öppna")" onkeypress="return event.charCode >= 48 && event.charCode <= 57" placeholder="@Translation.GetCoreTextTranslation("Ange ärendenummer du vill öppna")" type="text" />
+                            <button id="btnQuickOpen" class="btn" tabindex="1" type="button">@Translation.GetCoreTextTranslation("Öppna")</button>
                         </div>
                         <span id="messageQuickOpen">&nbsp;</span>
                     </form>
@@ -66,9 +64,9 @@
             }
         });
 
-        if ($('#txtQuickOpen')[0]) {
-            $('#txtQuickOpen').focus();
-        }
+        //if ($('#txtQuickOpen')[0]) {
+        //    $('#txtQuickOpen').focus();
+        //}
     });
     $("#btnQuickOpen").unbind().click(function (e) {
         e.preventDefault();
