[UPD] #59632 Self Service Restrictions for Anonymous Users

--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Views/Case/NewCase.cshtml
@@ -345,7 +345,7 @@
                                 @CaseFieldCaption(GlobalEnums.TranslationCaseFields.InventoryNumber)
                             </label>
                             <div class="col-md-9">
-                                @Html.TextBoxFor(i => Model.NewCase.InventoryNumber, new {@class = "hasAttribute", maxlength = "20", standardName = GlobalEnums.TranslationCaseFields.InventoryNumber.ToString()})
+                                @Html.TextBoxFor(i => Model.NewCase.InventoryNumber, new {@class = "hasAttribute", maxlength = "20", standardName = GlobalEnums.TranslationCaseFields.InventoryNumber.ToString(), autocomplete = "off" })
                             </div>
                         </div>
                     }
