--- a/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Content/css/selfservice.css
+++ b/dhHelpdeskNG/dhHelpdesk_NG.Web_SelfService/Content/css/selfservice.css
@@ -10,6 +10,7 @@ img
 }
 
 
+
 h4 {
     /*background: #f2f7fe;*/
     padding:5px;
@@ -1050,4 +1051,20 @@ div .multitext i {
     width:320px;
     height: 34px;
     margin-top: -2px;
+}
+
+.messageDialog {
+    position:fixed;
+    top: 35%;
+    left: 50%;
+    width:36em;    
+    height:25em;
+    margin-top: -12em; 
+    margin-left: -18em; 
+    /*border: 1px solid #45b56d;*/
+    background-color: #fff;
+}
+
+.messageIcon {    
+    width: 60px;  
 }
